--- a/src/pages/CSE/CSE.module.css
+++ b/src/pages/CSE/CSE.module.css
@@ -3,24 +3,24 @@
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    gap: 4rem;
+    gap: 8rem;
     max-width: 90%;
-    margin: 5rem auto;
-    padding: 3rem 6rem;
+    margin: auto;
+    padding: 0rem 6rem;
 }
 
 .card {
     margin: 0 auto;
-    width: 35rem;
+    width: 40rem;
     color: #fff;
-    box-shadow: 0 8px 7px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 7px 0px linear-gradient(to bottom right, #5A006A, #E0B5FF,#FFFFFF);
     border-radius: 5px;
 }
 
 .imgBox {
     width: 100%;
     border: 2px solid transparent;
-    border-image: linear-gradient(to bottom right, #09B326, #32B4ED);
+    border-image: linear-gradient(to bottom right, #5A006A, #E0B5FF,#FFFFFF);
     border-image-slice: 1;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .btn {
-    background-image: linear-gradient(to bottom right, #09B326, #32B4ED);
+    background-image: linear-gradient(to bottom right, #5A006A, #E0B5FF,#FFFFFF);
     padding: .5rem 1.7rem;
     border: none;
     border-radius: 5px;
